# Subdesc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml
src/subdesc/: __main__.py  cli.py  context.py  ffsubsync.py  mkvmerge.py  normalizer.py
